[project]
name = "sru-mcp"
version = "0.1.0"
description = "MCP server for searching library catalogs via the SRU protocol"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
    "xmltodict>=0.13",
]

[project.scripts]
sru-mcp = "server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
